--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <p>Tabuada:</p>
     <p id="resultadoTabuada"></p>
 
+    <!-- Os valores precisam ter raízes reais. Exemplo funcional: A = 1;B = 12;C = -13. -->
+    <h1>Bascara</h1>
+    <p>Informe o valor de A:</p>
+    <input type="number" id="A">
+    <p>Informe o valor de B:</p>
+    <input type="number" id="B">
+    <p>Informe o valor de C:</p>
+    <input type="number" id="C"><br>
+    <input type="button" value="Informar" id="botao02">
+    <P>Resposta:</P>
+    <p id="resultadoBascara"></p>
+
     <script src="script.js"></script>
 </body>
 </html>
