--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho Prog 2</title>
 </head>
+
 <body>
-    
+
     <h1>Tabuada</h1>
     <p>Informe o número</p>
     <input type="number" id="numeroTabuada">
@@ -26,6 +28,17 @@
     <P>Resposta:</P>
     <p id="resultadoBascara"></p>
 
+    <!-- Na questão pedida, é dito que se deve informar 3 valores, mas o mesmo é nem nexo, pois teriamos o valor de 2 catetos, e deveríamos descobrir a hipotenusa, dito isso, foi feito da seguinte maneira -->
+    <h1>Pitágoras</h1>
+    <p>Informe o valor do primeiro cateto:</p>
+    <input type="number" id="cateto">
+    <p>Informe o valor do segundo cateto:</p>
+    <input type="number" id="cateto02"><br>
+    <input type="button" value="Informar" id="botao03">
+    <P>Resposta:</P>
+    <p id="resultadoPitagoras"></p>
+
     <script src="script.js"></script>
 </body>
+
 </html>
